quickfix, display issue with the footer tab on mobile devices, alst renamed it to the info tab.

--- a/siteWide.css
+++ b/siteWide.css
@@ -158,13 +158,13 @@ a:hover {
 
 
 .mobile_only {
-    display: none;
+    display: none !important;
 }
 
 /* Mobile Dev */
 @media screen and (max-width: 768px) {
     .mobile_only {
-        display: auto;
+        display: block !important;
     }
     .desktop_only {
         display: none;
